--- a/frontpage.css
+++ b/frontpage.css
@@ -1,18 +1,16 @@
-*{
-    margin:0;
-    padding:0;
-}
 
 body{
     width:100vw;
-    margin:auto;
+    margin:0;
+    padding:0;
     height:auto;
+    max-width: 100%;
 }
 
-#body{
+#main{
     margin:auto;
     width:75%;
-    height:100vh;
+    height:150vh;
     background-color:grey;
 }
 
@@ -32,17 +30,25 @@ body{
     border-radius: 12px;
 }
 
-
 #text1{
     height:30vh;
-    width:80%;
-    background-color: tomato;
+    width:70%;
+    background-color: white;
     margin:auto;
 }
 
 #img{
     height:40vh;
-    width:80%;
+    width:70%;
     margin:auto;
     margin-top: 10px;
+    background-color: white;
+}
+
+#text2{
+    height:40vh;
+    width:70%;
+    margin:auto;
+    margin-top: 10px;
+    background-color: white;
 }
