--- a/mallstyle.css
+++ b/mallstyle.css
@@ -1,10 +1,11 @@
 body {
-    background-color: rgb(131, 131, 131);
+    background-image: url(https://wallpaperaccess.com/full/1286151.jpg);     /*placeholder bild*/
     display:flex;
+
 }
 #page {
     margin: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     width:60%;
     height: 100%;
     justify-content: center;
@@ -13,12 +14,16 @@ body {
     width:100%;
     height: 90px;
     background-color: rgb(49, 49, 49);
-    display:flex
+    display:flex;
+    justify-content: space-around;
+    
+    
 }
 .anchor {
-    width: 20%;
-    justify-content: space-between;
+    width: 100%;
     background-color: snow;
+    border: black 2px solid;
+    border-radius: 10px;
 }
 #main {
     margin:auto;
@@ -26,4 +31,7 @@ body {
 }
 h1 {
     text-align: center;
+}
+img {
+    width: 100%;
 }
