--- a/css filer/Traditions.css
+++ b/css filer/Traditions.css
@@ -34,7 +34,6 @@ body {
 #main {
     margin:auto;
     width: 95%;
-
 }
 
 h1 {
@@ -44,4 +43,5 @@ h1 {
 #img1{
     height:40vh;
     width: 40%;
+    margin:auto;
 }
