--- a/css filer/Traditions.css
+++ b/css filer/Traditions.css
@@ -38,10 +38,49 @@ body {
 
 h1 {
     text-align: center;
+    text-shadow: 2px 2px turquoise;
 }
 
 #img1{
+    height:38vh;
+    width: 40%;
+    border: 2.5px solid black;
+    border-radius:15px;
+}
+
+#text2{
+    height:40vh;
+    width: 100%;
+    background-color: white;
+    display:flex;
+    flex-direction: row-reverse;
+}
+
+#img2{
     height:40vh;
     width: 40%;
-    margin:auto;
+    border: 2.5px solid black;
+    border-radius:15px;
+}
+
+#text3{
+    height:35vh;
+    width: 30vw;
+    background-color: white;
+    display:flex;
+    margin-top:10px;
+}
+
+#img3{
+    height:40vh;
+    width: 40%;
+    border: 2.5px solid black;
+    border-radius:15px;
+}
+
+#text4{
+    height:35vh;
+    width: 30vw;
+    background-color: white;
+    display:flex;
 }
