--- a/css filer/Traditions.css
+++ b/css filer/Traditions.css
@@ -57,30 +57,31 @@ h1 {
 }
 
 #img2{
-    height:40vh;
+    height:38vh;
     width: 40%;
     border: 2.5px solid black;
     border-radius:15px;
 }
 
 #text3{
-    height:35vh;
-    width: 30vw;
+    height:40vh;
+    width: 100%;
     background-color: white;
     display:flex;
     margin-top:10px;
 }
 
 #img3{
-    height:40vh;
+    height:38vh;
     width: 40%;
     border: 2.5px solid black;
     border-radius:15px;
 }
 
 #text4{
-    height:35vh;
-    width: 30vw;
+    height:40vh;
+    width: 100%;
     background-color: white;
     display:flex;
+    flex-direction: row-reverse;
 }
