--- a/css filer/Traditions.css
+++ b/css filer/Traditions.css
@@ -1,3 +1,7 @@
+*{
+    font-family:'Times New Roman', Times, serif;
+}
+
 body {
     background-image: url(../Images/Bild1.jpg);     /*placeholder bild*/
     display:flex;
@@ -41,6 +45,15 @@ h1 {
     text-shadow: 2px 2px turquoise;
 }
 
+#text1{
+    height:10vh;
+    width: 100%;
+}
+
+#text1>p{
+    margin:10px;
+}
+
 #img1{
     height:38vh;
     width: 40%;
@@ -62,7 +75,7 @@ h1 {
 }
 
 #img2{
-    height:38vh;
+    height:36vh;
     width: 40%;
     border: 2.5px solid black;
     border-radius:15px;
