--- a/css filer/frontpage.css
+++ b/css filer/frontpage.css
@@ -36,8 +36,14 @@ body {
 h1 {
     text-align: center;
 }
-img {
-    width: 100%;
+#img1{
+    border-radius: 0.5px black;
+}
+#img2{
+    border-color: black;
+}
+#red{
+    color: red;
 }
 #green{
     color:green;
