--- a/css filer/Culture.css
+++ b/css filer/Culture.css
@@ -35,7 +35,16 @@ body {
 }
 h1 {
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
-img {
-    width: 50%;
+ img {
+    width: 100%;
+    height:300px;
+   
+}
+
+p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 17px;
 }
