bytte/lade till font + fonststorlek på paragraf (p)

--- a/css filer/Culture.css
+++ b/css filer/Culture.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body {
     background-image: url(../Images/Bild1.jpg);     /*placeholder bild*/
     display:flex;
@@ -45,6 +49,5 @@ h1 {
 }
 
 p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 17px;
 }
