--- a/css filer/Traditions.css
+++ b/css filer/Traditions.css
@@ -1,7 +1,9 @@
 *{
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-
+p {
+    font-size: 17px
+}
 body {
     background-image: url(../Images/Bild1.jpg);     /*placeholder bild*/
     display:flex;
