--- a/css filer/frontpage.css
+++ b/css filer/frontpage.css
@@ -1,3 +1,9 @@
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+p {
+    font-size: 17px;
+}
 body {
     background-image: url(../Images/Bild1.jpg);     /*placeholder bild*/
     display:flex;
